fixing food menu alignment on large screens

--- a/src/routes/Menu/Menu.scss
+++ b/src/routes/Menu/Menu.scss
@@ -55,6 +55,7 @@
         justify-content: center;
         align-items: flex-start;
         max-width: 1440px;
+        margin: 0 auto;
     }
     .food-menu {
         .food-section {
